--- a/loading/index.html
+++ b/loading/index.html
@@ -7,13 +7,22 @@
 </head>
 <body>
 <div class="container">
-    <div class="loading-1">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div class="loading-item">
+        <h2>loading1</h2>
+        <div class="loading-1">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div class="loading-item">
+        <h2>loading2</h2>
+        <div class="loading-2">
+            <div></div>
+        </div>
     </div>
 </div>
 </body>
