--- a/loading/index.html
+++ b/loading/index.html
@@ -24,6 +24,18 @@
             <div></div>
         </div>
     </div>
+    <div class="loading-item">
+        <h2>loading3</h2>
+        <div class="loading-3">
+            <div></div>
+        </div>
+    </div>
+    <div class="loading-item">
+        <h2>loading4</h2>
+        <div class="loading-4">
+            <div></div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
