--- a/loading/index.html
+++ b/loading/index.html
@@ -36,6 +36,26 @@
             <div></div>
         </div>
     </div>
+    <div class="loading-item">
+        <h2>loading5</h2>
+        <div class="loading-5">
+            <div>
+                <div>
+                    <div></div>
+                </div>
+                <div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="loading-item">
+        <h2>loading6</h2>
+        <div class="loading-6">
+            <div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
